--- a/Practicas/30/about.html
+++ b/Practicas/30/about.html
@@ -1,25 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Music Store</title>
 </head>
-<body>
+
+<body class="bodyabout">
     <div class="fondo"></div>
     <nav>
-         <img class="logo" src="Img/logo.png" alt="logo">
-         <div class="textnav">
+        <img class="logo" src="Img/logo.png" alt="logo">
+        <div class="textnav">
             <a href="index.html">Home</a>
             <a href="products.html">Products</a>
             <a href="lessons.html">Lessons</a>
             <a href="about.html">About Us</a>
             <a href="contacts.html">Contacts</a>
-         </div>
+        </div>
 
 
     </nav>
-    
+    <div class="aboutus">
+        <h1> <h2>About Us</h2>
+            <br>
+            <br>
+            Welcome to Harmony Sounds, your ultimate destination for all things music! 🎵
+            <br>
+            <br>
+            <h2>Our Story</h2>
+            <br>
+            <br>
+            At Harmony Sounds, we believe that music has the power to transform lives. Whether you’re a seasoned
+            musician, an aspiring artist, or simply a music enthusiast, our mission is to provide you with top-quality
+            instruments, accessories, and resources to fuel your passion.
+            <br>
+            <br>
+            <h2>What Sets Us Apart</h2>
+            <br>
+            <br>
+            Curated Selection: Our team of music aficionados handpicks each product in our store. From classic guitars
+            to cutting-edge synthesizers, we’ve got something for every melody-maker.
+            <br>
+            <br>
+            <h2>Expert Advice:</h2><br>
+            <br>
+            Need guidance on choosing the perfect instrument? Our knowledgeable staff is here to assist
+            you. We’re not just sellers; we’re music enthusiasts who understand the nuances of sound.
+            <br>
+            <h2>Community Hub:</h2><br>
+            <br> Harmony Sounds isn’t just a store; it’s a community. Join us for workshops, jam sessions, and
+            events that celebrate the magic of music.
+            <br>
+            <br>
+            <h2>Meet the Team</h2>
+            <br>
+            <br>
+            <h2>Melissa (Founder & CEO):</h2> A pianist at heart, Melissa’s vision drives Harmony Sounds. Her dedication to music
+            education and accessibility is the heartbeat of our store.
+            <br>
+            <br>
+            <h2>Alex (Guitar Guru):</h2> Alex’s fingers dance effortlessly across the fretboard. He’s the go-to person for all
+            things strings—whether it’s acoustic, electric, or bass.
+            <br>
+            <br>
+            <h2>Nina (Synth Sorceress):</h2> With a penchant for analog synths, Nina brings a touch of vintage warmth to our
+            collection. She’ll geek out with you about oscillators any day!
+            <br>
+            <br>
+            <h2>Our Promise</h2>
+            <br>
+            <br>
+            When you shop at Harmony Sounds, you’re not just buying gear; you’re joining a symphony of like-minded
+            souls. Let’s create beautiful music together!
+        </h1>
+    </div>
 </body>
+
 </html>
