--- a/Practicas/Js/1.html
+++ b/Practicas/Js/1.html
@@ -18,6 +18,8 @@
         let a=10
         console.log(a)
         console.log(9*a)
+        let b=7*a
+        console.log(b)
     </script>
 </body>
 
