--- a/Practicas/Js/1.html
+++ b/Practicas/Js/1.html
@@ -14,7 +14,7 @@
         console.log("Hello,World")
         console.log(23 + 97)
         console.log(5 + 90 + 66 + 33 + 145 + 81)
-        console.log(4 + 6 + 9) / 77
+        console.log((4 + 6 + 9) / 77)
         let a=10
         console.log(a)
         console.log(9*a)
