--- a/index.html
+++ b/index.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Página de Inicio</title>
-    <link rel="stylesheet" href="Practicas/13/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="Practicas/13/styles.css" />
+  </head>
+  <body>
     <div class="project-links">
-        <h1>Mis Proyectos</h1>
-        <ul>
-            <li><a href="Practicas/1/index.html">Proyecto 1</a></li>
-            <li><a href="Practicas/2/index.html">Proyecto 2</a></li>
-            <li><a href="Practicas/3/index.html">Proyecto 3</a></li>
-            <li><a href="Practicas/4/index.html">Proyecto 4</a></li>
-            <li><a href="Practicas/5/index.html">Proyecto 5</a></li>
-            <li><a href="Practicas/6/index.html">Proyecto 6</a></li>
-            <li><a href="Practicas/7/index.html">Proyecto 7</a></li>
-            <li><a href="Practicas/8/index.html">Proyecto 8</a></li>
-            <li><a href="Practicas/9/index.html">Proyecto 9</a></li>
-            <li><a href="Practicas/10/index.html">Proyecto 10</a></li>
-            <li><a href="Practicas/11/index.html">Proyecto 11</a></li>
-            <li><a href="Practicas/12/index.html">Proyecto 12</a></li>
-            <li><a href="Practicas/14/index.html">Proyecto 14</a></li>
-            <li><a href="Practicas/15/index.html">Proyecto 15</a></li>
-            <li><a href="Practicas/16/index.html">Proyecto 16</a></li>
-            <li><a href="Practicas/17/index.html">Proyecto 17</a></li>
-            <li><a href="Practicas/19/index.html">Proyecto 19</a></li>
-            <li><a href="Practicas/20/index.html">Proyecto 20</a></li>
-            <li><a href="Practicas/22/index.html">Proyecto 22</a></li>
-            <li><a href="Practicas/23/index.html">Proyecto 23</a></li>
-            <li><a href="Practicas/27/index.html">Proyecto 27</a></li>
-            <li><a href="Practicas/28/index.html">Proyecto 28</a></li>
-            <li><a href="Practicas/29/index.html">Proyecto 29</a></li>
-            <li><a href="Practicas/30/index.html">Proyecto 30</a></li>
-            <li><a href="Practicas/FP/index.html">FP</a></li>
-        </ul>
+      <h1>Mis Proyectos</h1>
+      <ul>
+        <li><a href="Practicas/1/index.html">Proyecto 1</a></li>
+        <li><a href="Practicas/2/index.html">Proyecto 2</a></li>
+        <li><a href="Practicas/3/index.html">Proyecto 3</a></li>
+        <li><a href="Practicas/4/index.html">Proyecto 4</a></li>
+        <li><a href="Practicas/5/index.html">Proyecto 5</a></li>
+        <li><a href="Practicas/6/index.html">Proyecto 6</a></li>
+        <li><a href="Practicas/7/index.html">Proyecto 7</a></li>
+        <li><a href="Practicas/8/index.html">Proyecto 8</a></li>
+        <li><a href="Practicas/9/index.html">Proyecto 9</a></li>
+        <li><a href="Practicas/10/index.html">Proyecto 10</a></li>
+        <li><a href="Practicas/11/index.html">Proyecto 11</a></li>
+        <li><a href="Practicas/12/index.html">Proyecto 12</a></li>
+        <li><a href="Practicas/14/index.html">Proyecto 14</a></li>
+        <li><a href="Practicas/15/index.html">Restaurante</a></li>
+        <li><a href="Practicas/16/index.html">Polywork Clone</a></li>
+        <li><a href="Practicas/17/index.html">Check Age</a></li>
+        <li><a href="Practicas/19/index.html">Calculator 1</a></li>
+        <li><a href="Practicas/20/index.html">Calculator 2</a></li>
+        <li><a href="Practicas/22/index.html">Meneame Clone</a></li>
+        <li><a href="Practicas/23/index.html">Martin Clone</a></li>
+        <li><a href="Practicas/27/index.html">Flex</a></li>
+        <li><a href="Practicas/28/index.html">MicoGPT</a></li>
+        <li><a href="Practicas/29/index.html">Enviroute</a></li>
+        <li><a href="Practicas/30/index.html">Music Store</a></li>
+        <li><a href="Practicas/FP/index.html">FP</a></li>
+      </ul>
     </div>
-</body>
+  </body>
 </html>
