--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="project-links">
-      <h1>Mis Proyectos</h1>
+      <h1>My Projects</h1>
       <ul>
         <li><a href="Practicas/1/index.html">Proyecto 1</a></li>
         <li><a href="Practicas/2/index.html">Proyecto 2</a></li>
