--- a/Practicas/32/index.html
+++ b/Practicas/32/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,14 @@
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
+
 <body>
     <div id="datetime"></div>
     <a href="index.html">
-    <div class="image">
+        <div class="image">
 
-        <img src="elpais.jpg" alt="logo">
-    </div>
+            <img src="elpais.jpg" alt="logo">
+        </div>
     </a>
     <div class="textnav">
 
@@ -34,24 +36,30 @@
             <p>Televisión</p>
             <p>Gente</p>
             <p>El País Semanal</p>
-            
+
         </nav>
     </div>
-<div class="leftarticle">
+    <div class="leftarticle">
 
-    <div class="article1">
-        <h6>BARÓMETRO DE 40dB.</h6>
-        <h1>PNV y EH Bildu empatan y dejan el futuro Gobierno en manos del PSE </h1>
-        <h6 class="writers">Xosé Hermida / Yolanda Clemente|Madrid</h6>
-        <p>Solo un 13% de los vascos demanda la independencia, según una encuesta de 40dB. para EL PAÍS y la SER, a un mes de las elecciones autonómicas</p>
-    </div>
+        <article class="article1">
+            <h6>BARÓMETRO DE 40dB.</h6>
+            <h1>PNV y EH Bildu empatan y dejan el futuro Gobierno en manos del PSE </h1>
+            <h6 class="writers">Xosé Hermida / Yolanda Clemente|Madrid</h6>
+            <p>Solo un 13% de los vascos demanda la independencia, según una encuesta de 40dB. para EL PAÍS y la SER, a
+                un mes de las elecciones autonómicas</p>
+        </article>
 
-    <div class="article1">
-        <img src="e.jpeg" alt="e" id="e"> 
-        <h1>El mando del CNI captado por EE UU se llevó datos de espías en el extranjero</h1>
-        <h6 class="writers">Joaquín Gil / Miguel González|Madrid</h6>
-        <p>Los investigadores indagan si los dos agentes imputados gestionaron la compra de propiedades en Brasil</p>
+        <article class="article1">
+
+            <h1>
+                <img src="e.jpeg" alt="e" id="e">
+                El mando del CNI captado por EE UU se llevó datos de espías en el extranjero
+            </h1>
+            <h6 class="writers">Joaquín Gil / Miguel González|Madrid</h6>
+            <p>Los investigadores indagan si los dos agentes imputados gestionaron la compra de propiedades en Brasil
+            </p>
+        </article>
     </div>
-</div>
 </body>
+
 </html>
