--- a/Practicas/JS2/Funciones/1a/index.html
+++ b/Practicas/JS2/Funciones/1a/index.html
@@ -9,15 +9,15 @@
     <script>
         function ej1(lado){
             let salida="";
-            for (let i=0; i<lado; i++){
-                for (let j=0; j<lado; j++){
-                    salida += "*"
-                }
-                salida += "\n";
+            for (let i=0;i<lado;i++){
+            for (let j=0;j<lado;j++){
+                salida += "*";
+            }
+            salida += "\n";
             }
             alert(salida);
         }
-        ej1(7);
+        ej1(7)
     </script>
 </body>
 </html>
