--- a/Practicas/32/index.html
+++ b/Practicas/32/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -58,6 +58,17 @@
             <h6 class="writers">Joaquín Gil / Miguel González|Madrid</h6>
             <p>Los investigadores indagan si los dos agentes imputados gestionaron la compra de propiedades en Brasil
             </p>
+        </article>
+    </div>
+    <div class="centercolumn">
+        <img src="img/4.jpeg" alt="4" class="cambio">
+        <article>
+            <h1>
+                <img src="e.jpeg" alt="e" id="e">
+                En Galicia empieza la Primavera
+            </h1>
+            <h6 class="writers">Domenico Ciardullo | Pontevedra</h6>
+            <p>En Galicia empieza la temporada primaveril aunque no se han parado los dias de lluvia</p>
         </article>
     </div>
 </body>
