--- a/Practicas/32/index.html
+++ b/Practicas/32/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EL PAÍS:El periódico global</title>
+    <link rel="icon" type="image/png" href="img/favicon-32x32.png">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
