--- a/Practicas/32/index.html
+++ b/Practicas/32/index.html
@@ -21,26 +21,27 @@
     <div class="textnav">
 
         <nav>
-            <p>Internacional</p>
-            <p>Opinión</p>
-            <p>España</p>
-            <p>Economía</p>
-            <p>Sociedad</p>
-            <p>Educación</p>
-            <p>Medio Ambiente</p>
-            <p>Ciencia</p>
-            <p>Salud</p>
-            <p>Tecnología</p>
-            <p>Cultura</p>
-            <p>Babelia</p>
-            <p>Deportes</p>
-            <p>Televisión</p>
-            <p>Gente</p>
-            <p>El País Semanal</p>
+            <a href=""><p>Internacional</p></a>
+            <a href=""><p>Opinión</p></a>
+            <a href=""><p>España</p></a>
+            <a href=""><p>Economía</p></a>
+            <a href=""><p>Sociedad</p></a>
+            <a href=""><p>Educación</p></a>
+            <a href=""><p>Medio Ambiente</p></a>
+            <a href=""><p>Ciencia</p></a>
+            <a href=""><p>Salud</p></a>
+            <a href=""><p>Tecnología</p></a>
+            <a href=""><p>Cultura</p></a>
+            <a href=""><p>Babelia</p></a>
+            <a href=""><p>Deportes</p></a>
+            <a href=""><p>Televisión</p></a>
+            <a href=""><p>Gente</p></a>
+            <a href=""><p>El País Semanal</p></a>
 
         </nav>
     </div>
-    <div class="leftarticle">
+    <div class="content">
+    <div class="leftcolumn">
 
         <article class="article1">
             <h6>BARÓMETRO DE 40dB.</h6>
@@ -72,6 +73,42 @@
             <p>En Galicia empieza la temporada primaveril aunque no se han parado los dias de lluvia</p>
         </article>
     </div>
+    <div class="rightcolumn">
+<h1 class="opicol">Opinión</h1>
+
+<p class="opi">
+    <img src="e.jpeg" alt="e" id="e">
+    Cuando fuimos piratas
+</p>
+<p class="opiart">Durante muchos años, la defensa de la piratería —o de las libertades en internet, según a quién se pregunte— vertebró España; o al menos, buena parte del discurso y los movimientos digitales</p>
+<h6 class="writers">Delia Rodríguez</h6>
+
+<p class="opi">
+    <img src="e.jpeg" alt="e" id="e">
+    El herpes de Brasero
+</p>
+<p class="opiart">Las lágrimas de los cofrades y las caras de cabreo de quienes se mueren de frío en las playas demuestran que puede que la fe mueva montañas, pero no borrascas </p>
+<h6 class="writers">Luz Sánchez-Mellado</h6>
+</div>
+</div>
+
+<div class="content2">
+    <div class="leftcolumn2">
+
+        <h1>“¿Por qué vendes ese vestido si te queda tan bien?”. Vinted y Wallapop son pasto para los acosadores</h1>
+        <h6 class="writers">José Mendiola Zuriarrain</h6>
+        <p>Los expertos recomiendan a las usuarias que bloqueen y denuncien a los hombres que usan las plataformas de compraventa para mensajes y propuestas sexuales</p>
+    </div>
+<div class="rightcolumn2">
+<img src="img/walla.avif" alt="walla">
+<h6>Una mujer mira la aplicación de Wallapop.<span class="A">Álvaro García</span></h6>
+</div>
+</div>
+
+<div class="content3">
+<img src="img/1.1.avif" alt="1.1" class="smallimg">
+<p>La polémica sobre el ayuno intermitente: ni  milagroso ni peligroso para el corazón</p>
+</div>
 </body>
 
 </html>
