--- a/Practicas/32/index.html
+++ b/Practicas/32/index.html
@@ -11,6 +11,12 @@
 </head>
 
 <body>
+    <div id="overlay">
+        <div>
+          By using this website, you consent to privacy policies mentionned on <a href="#">this page</a>
+           [ <a id="consent-button" href="#">Ok</a> ]
+        </div>
+      </div>
     <div id="datetime"></div>
     <a href="index.html">
         <div class="image">
@@ -106,9 +112,28 @@
 </div>
 
 <div class="content3">
-<img src="img/1.1.avif" alt="1.1" class="smallimg">
-<p>La polémica sobre el ayuno intermitente: ni  milagroso ni peligroso para el corazón</p>
+<div class="contentimage">
+    <img src="img/1.1.avif" alt="1.1" class="smallimg">
+<h1>La polémica sobre el ayuno intermitente: ni  milagroso ni peligroso para el corazón</h1>
+<h6 class="writers">Daniel Mediavilla</h6>
 </div>
+<div class="contentimage">
+<img src="img/1.2.avif" alt="1.2" class="smallimg">
+<h1>El olvidado matrimonio de Carrie Fisher y Paul Simon: 11 meses de gritos, depresión, fama y drogas</h1>
+<h6 class="writers">María Porcel|Los Ángeles</h6>
+</div>
+<div class="contentimage">
+   <img src="img/1.3.avif" alt="1.3" class="smallimg">
+   <h1>El beneficio de callarse, una poderosa herramienta para ganar notoriedad </h1>
+   <h6 class="writers">Francesc Miralles</h6>
+</div>
+<div class="contentimage">
+    <img src="img/1.4.avif" alt="1.4" class="smallimg">
+    <h1>Qué ha pasado con Alexa Demie, la única estrella fracasada de ‘Euphoria’</h1>
+    <h6 class="writers">Carlos Megía</h6>
+</div>
+</div>
+
 </body>
 
 </html>
