--- a/Practicas/32/index.html
+++ b/Practicas/32/index.html
@@ -13,7 +13,8 @@
 <body>
     <div id="overlay">
         <div>
-          By using this website, you consent to privacy policies mentionned on <a href="#">this page</a>
+            We use Cookies to offer you a better browsing experience, analyse site traffic and personalize content and serve targeted advertisement. More information can be found here. By continuing to browse you will consent to our use of cookies. 
+            By using this website, you consent to privacy policies mentionned on <a href="#">this page</a>
            [ <a id="consent-button" href="#">Ok</a> ]
         </div>
       </div>
