--- a/Practicas/32/index.html
+++ b/Practicas/32/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -13,11 +13,13 @@
 <body>
     <div id="overlay">
         <div>
-            We use Cookies to offer you a better browsing experience, analyse site traffic and personalize content and serve targeted advertisement. More information can be found here. By continuing to browse you will consent to our use of cookies. 
+            We use Cookies to offer you a better browsing experience, analyse site traffic and personalize content and
+            serve targeted advertisement. More information can be found here. By continuing to browse you will consent
+            to our use of cookies.
             By using this website, you consent to privacy policies mentionned on <a href="#">this page</a>
-           [ <a id="consent-button" href="#">Ok</a> ]
+            [ <a id="consent-button" href="#">Ok</a> ]
         </div>
-      </div>
+    </div>
     <div id="datetime"></div>
     <a href="index.html">
         <div class="image">
@@ -28,112 +30,150 @@
     <div class="textnav">
 
         <nav>
-            <a href=""><p>Internacional</p></a>
-            <a href=""><p>Opinión</p></a>
-            <a href=""><p>España</p></a>
-            <a href=""><p>Economía</p></a>
-            <a href=""><p>Sociedad</p></a>
-            <a href=""><p>Educación</p></a>
-            <a href=""><p>Medio Ambiente</p></a>
-            <a href=""><p>Ciencia</p></a>
-            <a href=""><p>Salud</p></a>
-            <a href=""><p>Tecnología</p></a>
-            <a href=""><p>Cultura</p></a>
-            <a href=""><p>Babelia</p></a>
-            <a href=""><p>Deportes</p></a>
-            <a href=""><p>Televisión</p></a>
-            <a href=""><p>Gente</p></a>
-            <a href=""><p>El País Semanal</p></a>
+            <a href="">
+                <p>Internacional</p>
+            </a>
+            <a href="">
+                <p>Opinión</p>
+            </a>
+            <a href="">
+                <p>España</p>
+            </a>
+            <a href="">
+                <p>Economía</p>
+            </a>
+            <a href="">
+                <p>Sociedad</p>
+            </a>
+            <a href="">
+                <p>Educación</p>
+            </a>
+            <a href="">
+                <p>Medio Ambiente</p>
+            </a>
+            <a href="">
+                <p>Ciencia</p>
+            </a>
+            <a href="">
+                <p>Salud</p>
+            </a>
+            <a href="">
+                <p>Tecnología</p>
+            </a>
+            <a href="">
+                <p>Cultura</p>
+            </a>
+            <a href="">
+                <p>Babelia</p>
+            </a>
+            <a href="">
+                <p>Deportes</p>
+            </a>
+            <a href="">
+                <p>Televisión</p>
+            </a>
+            <a href="">
+                <p>Gente</p>
+            </a>
+            <a href="">
+                <p>El País Semanal</p>
+            </a>
 
         </nav>
     </div>
     <div class="content">
-    <div class="leftcolumn">
+        <div class="leftcolumn">
 
-        <article class="article1">
-            <h6>BARÓMETRO DE 40dB.</h6>
-            <h1>PNV y EH Bildu empatan y dejan el futuro Gobierno en manos del PSE </h1>
-            <h6 class="writers">Xosé Hermida / Yolanda Clemente|Madrid</h6>
-            <p>Solo un 13% de los vascos demanda la independencia, según una encuesta de 40dB. para EL PAÍS y la SER, a
-                un mes de las elecciones autonómicas</p>
-        </article>
+            <article class="article1">
+                <h6>BARÓMETRO DE 40dB.</h6>
+                <h1>PNV y EH Bildu empatan y dejan el futuro Gobierno en manos del PSE </h1>
+                <h6 class="writers">Xosé Hermida / Yolanda Clemente|Madrid</h6>
+                <p>Solo un 13% de los vascos demanda la independencia, según una encuesta de 40dB. para EL PAÍS y la
+                    SER, a
+                    un mes de las elecciones autonómicas</p>
+            </article>
 
-        <article class="article1">
+            <article class="article1">
 
-            <h1>
+                <h1>
+                    <img src="e.jpeg" alt="e" id="e">
+                    El mando del CNI captado por EE UU se llevó datos de espías en el extranjero
+                </h1>
+                <h6 class="writers">Joaquín Gil / Miguel González|Madrid</h6>
+                <p>Los investigadores indagan si los dos agentes imputados gestionaron la compra de propiedades en
+                    Brasil
+                </p>
+            </article>
+        </div>
+        <div class="centercolumn">
+            <img src="img/4.jpeg" alt="4" class="cambio">
+            <article>
+                <h1>
+                    <img src="e.jpeg" alt="e" id="e">
+                    En Galicia empieza la Primavera
+                </h1>
+                <h6 class="writers">Domenico Ciardullo | Pontevedra</h6>
+                <p>En Galicia empieza la temporada primaveril aunque no se han parado los dias de lluvia</p>
+            </article>
+        </div>
+        <div class="rightcolumn">
+            <h1 class="opicol">Opinión</h1>
+
+            <p class="opi">
                 <img src="e.jpeg" alt="e" id="e">
-                El mando del CNI captado por EE UU se llevó datos de espías en el extranjero
-            </h1>
-            <h6 class="writers">Joaquín Gil / Miguel González|Madrid</h6>
-            <p>Los investigadores indagan si los dos agentes imputados gestionaron la compra de propiedades en Brasil
+                Cuando fuimos piratas
             </p>
-        </article>
-    </div>
-    <div class="centercolumn">
-        <img src="img/4.jpeg" alt="4" class="cambio">
-        <article>
-            <h1>
+            <p class="opiart">Durante muchos años, la defensa de la piratería —o de las libertades en internet, según a
+                quién se pregunte— vertebró España; o al menos, buena parte del discurso y los movimientos digitales</p>
+            <h6 class="writers">Delia Rodríguez</h6>
+
+            <p class="opi">
                 <img src="e.jpeg" alt="e" id="e">
-                En Galicia empieza la Primavera
+                El herpes de Brasero
+            </p>
+            <p class="opiart">Las lágrimas de los cofrades y las caras de cabreo de quienes se mueren de frío en las
+                playas demuestran que puede que la fe mueva montañas, pero no borrascas </p>
+            <h6 class="writers">Luz Sánchez-Mellado</h6>
+        </div>
+    </div>
+
+    <div class="content2">
+        <div class="leftcolumn2">
+
+            <h1>“¿Por qué vendes ese vestido si te queda tan bien?”. Vinted y Wallapop son pasto para los acosadores
             </h1>
-            <h6 class="writers">Domenico Ciardullo | Pontevedra</h6>
-            <p>En Galicia empieza la temporada primaveril aunque no se han parado los dias de lluvia</p>
-        </article>
+            <h6 class="writers">José Mendiola Zuriarrain</h6>
+            <p>Los expertos recomiendan a las usuarias que bloqueen y denuncien a los hombres que usan las plataformas
+                de compraventa para mensajes y propuestas sexuales</p>
+        </div>
+        <div class="rightcolumn2">
+            <img src="img/walla.avif" alt="walla">
+            <h6>Una mujer mira la aplicación de Wallapop.<span class="A">Álvaro García</span></h6>
+        </div>
     </div>
-    <div class="rightcolumn">
-<h1 class="opicol">Opinión</h1>
 
-<p class="opi">
-    <img src="e.jpeg" alt="e" id="e">
-    Cuando fuimos piratas
-</p>
-<p class="opiart">Durante muchos años, la defensa de la piratería —o de las libertades en internet, según a quién se pregunte— vertebró España; o al menos, buena parte del discurso y los movimientos digitales</p>
-<h6 class="writers">Delia Rodríguez</h6>
-
-<p class="opi">
-    <img src="e.jpeg" alt="e" id="e">
-    El herpes de Brasero
-</p>
-<p class="opiart">Las lágrimas de los cofrades y las caras de cabreo de quienes se mueren de frío en las playas demuestran que puede que la fe mueva montañas, pero no borrascas </p>
-<h6 class="writers">Luz Sánchez-Mellado</h6>
-</div>
-</div>
-
-<div class="content2">
-    <div class="leftcolumn2">
-
-        <h1>“¿Por qué vendes ese vestido si te queda tan bien?”. Vinted y Wallapop son pasto para los acosadores</h1>
-        <h6 class="writers">José Mendiola Zuriarrain</h6>
-        <p>Los expertos recomiendan a las usuarias que bloqueen y denuncien a los hombres que usan las plataformas de compraventa para mensajes y propuestas sexuales</p>
+    <div class="content3">
+        <div class="contentimage">
+            <img src="img/1.1.avif" alt="1.1" class="smallimg">
+            <h1>La polémica sobre el ayuno intermitente: ni milagroso ni peligroso para el corazón</h1>
+            <h6 class="writers">Daniel Mediavilla</h6>
+        </div>
+        <div class="contentimage">
+            <img src="img/1.2.avif" alt="1.2" class="smallimg">
+            <h1>El olvidado matrimonio de Carrie Fisher y Paul Simon: 11 meses de gritos, depresión, fama y drogas</h1>
+            <h6 class="writers">María Porcel|Los Ángeles</h6>
+        </div>
+        <div class="contentimage">
+            <img src="img/1.3.avif" alt="1.3" class="smallimg">
+            <h1>El beneficio de callarse, una poderosa herramienta para ganar notoriedad </h1>
+            <h6 class="writers">Francesc Miralles</h6>
+        </div>
+        <div class="contentimage">
+            <img src="img/1.4.avif" alt="1.4" class="smallimg">
+            <h1>Qué ha pasado con Alexa Demie, la única estrella fracasada de ‘Euphoria’</h1>
+            <h6 class="writers">Carlos Megía</h6>
+        </div>
     </div>
-<div class="rightcolumn2">
-<img src="img/walla.avif" alt="walla">
-<h6>Una mujer mira la aplicación de Wallapop.<span class="A">Álvaro García</span></h6>
-</div>
-</div>
-
-<div class="content3">
-<div class="contentimage">
-    <img src="img/1.1.avif" alt="1.1" class="smallimg">
-<h1>La polémica sobre el ayuno intermitente: ni  milagroso ni peligroso para el corazón</h1>
-<h6 class="writers">Daniel Mediavilla</h6>
-</div>
-<div class="contentimage">
-<img src="img/1.2.avif" alt="1.2" class="smallimg">
-<h1>El olvidado matrimonio de Carrie Fisher y Paul Simon: 11 meses de gritos, depresión, fama y drogas</h1>
-<h6 class="writers">María Porcel|Los Ángeles</h6>
-</div>
-<div class="contentimage">
-   <img src="img/1.3.avif" alt="1.3" class="smallimg">
-   <h1>El beneficio de callarse, una poderosa herramienta para ganar notoriedad </h1>
-   <h6 class="writers">Francesc Miralles</h6>
-</div>
-<div class="contentimage">
-    <img src="img/1.4.avif" alt="1.4" class="smallimg">
-    <h1>Qué ha pasado con Alexa Demie, la única estrella fracasada de ‘Euphoria’</h1>
-    <h6 class="writers">Carlos Megía</h6>
-</div>
-</div>
 
 </body>
 
