--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <li><a href="Practicas/29/index.html">Enviroute</a></li>
         <li><a href="Practicas/30/index.html">Music Store</a></li>
         <li><a href="Practicas/32/index.html">EL PAÍS:El periódico global </a></li>
+        <li><a href="Practicas/33/index.html">Anmial Shop </a></li>
         <li><a href="Practicas/FP/index.html">FP</a></li>
       </ul>
     </div>
