--- a/Practicas/33/index.html
+++ b/Practicas/33/index.html
@@ -27,13 +27,13 @@
             <a href="index.html">
                 <p>Home</p>
             </a>
-            <a href="">
+            <a href="adopt.html">
                 <p>Adopt</p>
             </a>
-            <a href="">
+            <a href="products.html">
                 <p>Products</p>
             </a>
-            <a href="">
+            <a href="about.html">
                 <p>About us</p>
             </a>
         </nav>
