--- a/Practicas/33/adopt.html
+++ b/Practicas/33/adopt.html
@@ -46,7 +46,7 @@
             can make a difference, one adoption at a time.</p>
 <div class="animals">
     <div class="adoptcat">
-        <a href=""><img src="img/cat.avif" alt="cat"></a>
+        <a href=""><img src="img/cat.jpg" alt="cat"></a>
         <a href=""><p class="textanimals">Cats</p></a>
     </div>
     <div class="adoptdog">
