--- a/Practicas/33/index.html
+++ b/Practicas/33/index.html
@@ -13,11 +13,12 @@
 <body>
     <div id="overlay">
         <div>
+           <a id="exit" href="#">X</a>
             We use Cookies to offer you a better browsing experience, analyse site traffic and personalize content and
             serve targeted advertisement. More information can be found here. By continuing to browse you will consent
             to our use of cookies.
-            By using this website, you consent to privacy policies mentionned on <a href="#">this page</a>
-            [ <a id="consent-button" href="#">Ok</a> ]
+            By using this website, you consent to privacy policies mentionned on <a href="https://www.termsfeed.com/blog/sample-cookies-policy-template/">this page</a>
+            [ <a id="consent-button" href="#">OK</a> ]
         </div>
     </div>
         
