--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <li><a href="Practicas/30/index.html">Music Store</a></li>
         <li><a href="Practicas/32/index.html">EL PAÍS:El periódico global </a></li>
         <li><a href="Practicas/33/index.html">Anmial Shop </a></li>
+        <li><a href="Practicas/calc/index.html">Simple Calculator</a></li>
         <li><a href="Practicas/FP/index.html">FP</a></li>
       </ul>
     </div>
