--- a/Practicas/calc/index.html
+++ b/Practicas/calc/index.html
@@ -20,7 +20,7 @@
                 <div>
                     <input type="button" value="AC" id="ac" class="operator">
                     <input type="button" value="DEL" id="del" class="operator">
-                    <input type="button" value="." id="point" class="operator">
+                    <input type="button" value="." id="decimal" class="number">
                     <input type="button" value="/" id="divide" class="operator">
 
                 </div>
